# Vela

./: .codegraph  .gitignore  README.md  package.json  tsconfig.json  vela.workspace.json
.github/workflows/: ci.yml
apps/playground/: README.md  index.html  package.json  serve.ts  styles.css  vela.json
docs/: README.md  api-contracts.md  app-load-and-startup.md  app-package-layout.md  architecture.md  capabilities-and-plugins.md  composition-and-layers.md  cross-platform-abstraction.md  design-gaps.md  input-and-hit-testing.md  linux-spike-architecture.md  macos-spike-architecture.md  materials.md  platform-support.md  qt-composition-notes.md  roadmap.md  run-modes.md  tauri-comparison.md  technology-stack.md  testing-and-acceptance.md  writing-guidelines.md
docs/adr/: 0001-composition-hit-material.md  0002-ipc-privilege.md  0004-cross-platform-abstraction.md  0005-zig-interop-layer.md  0006-ts-first-capabilities.md  0007-typescript-full-stack-host.md  0008-zig-systems-surface.md  README.md
docs/research/: qt-composition-notes.md  tauri-comparison.md
example/: README.md
example/clock/: README.md  index.html  package.json  (+3 more)
hosts/windows-shell/: CMakeLists.txt  README.md
hosts/windows-shell/src/: main.cpp
hosts/windows-shell/src/bridge/: message_bridge.cpp  message_bridge.h  preload.js
hosts/windows-shell/src/hit/: README.md
hosts/windows-shell/src/materials/: README.md
hosts/windows-shell/src/webview/: webview2_host.cpp  webview2_host.h
hosts/windows-shell/src/window/: window_host.cpp  window_host.h
skills/: README.md
templates/: README.md
(+113 files in other folders)
